# Hedwig

./: Cargo.toml  README.md
src/: client.rs  error.rs  main.rs  sender.rs
src/model/: mod.rs  request_headers.rs
src/model/core/: mod.rs  request.rs  response.rs  scheme.rs
src/model/http/: http_method.rs  http_status.rs  mod.rs
src/requester/: get.rs
