[package]
name = "hedwig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"

bytes = "1"
http = "1.1.0"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.0", features = [
  "client-legacy",
  "tokio",
  "http1",
] }
tokio = { version = "1", features = ["full"] }

url = { version = "2.5.0" }
